--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,2 +1,2 @@
-<h2 class='section-title'>Galerie</h2>
+<h2 class="section-title">{{ 'gallery' | translate }}</h2>
 <ng-image-slider [images]="imageObject" #nav></ng-image-slider>
