--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,29 +1,61 @@
 <ion-grid>
-	<ion-col justify-content-center class='center-text-footer'>
-		<h2 class='section-title'>Un eveniment organizat și sprijinit de către</h2>
-	</ion-col>
-	<ion-row justify-content-around>
-		<img class='footer-img' src='../../assets/images/Sponsors/logo-csc.png' alt='Centrul pentru Studii Complexe'>
-		<img class='footer-img' src='../../assets/images/Sponsors/Sigla-INCS.gif'
-			alt='Institutul Național de Cercetare Pentru Sport - România'>
-		<img class='footer-img' src='../../assets/images/Sponsors/Asociatia-pentru-Inovatie-logo-1.png'
-			alt='Asociția pentru Inovație'>
-	</ion-row>
-	<div class='material-card'>
-		<ion-row justify-content-center>
-			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navPrivacyPolicy()'>
-				Politică de Confidențialitate
-			</ion-button>
-			<ion-button class='footer-btn' fill='clear' expand='full' (click)='navContact()'>
-				Contact			
-			</ion-button>
-			<ion-button href='https://www.facebook.com/Atlantykron' class='footer-btn' fill='clear' expand='full'>
-				<ion-icon name="logo-facebook"></ion-icon>			
-			</ion-button>
-			<ion-button href='https://www.instagram.com/atlantykron/' class='footer-btn' fill='clear' expand='full'>
-				<ion-icon name="logo-instagram"></ion-icon>			
-			</ion-button>
-		</ion-row>
-	</div>
+  <ion-col justify-content-center class="center-text-footer">
+    <h2 class="section-title">{{ 'organizedBy' | translate }}</h2>
+  </ion-col>
+  <ion-row justify-content-around>
+    <img
+      class="footer-img"
+      src="../../assets/images/Sponsors/logo-csc.png"
+      alt="Centrul pentru Studii Complexe"
+    />
+    <img
+      class="footer-img"
+      src="../../assets/images/Sponsors/Sigla-INCS.gif"
+      alt="Institutul Național de Cercetare Pentru Sport - România"
+    />
+    <img
+      class="footer-img"
+      src="../../assets/images/Sponsors/Asociatia-pentru-Inovatie-logo-1.png"
+      alt="Asociția pentru Inovație"
+    />
+  </ion-row>
+  <div class="material-card">
+    <ion-row justify-content-center>
+      <ion-button
+        class="footer-btn"
+        fill="clear"
+        expand="full"
+        (click)="navPrivacyPolicy()"
+      >
+        {{ 'privacyPolicy' | translate }}
+      </ion-button>
+      <ion-button
+        class="footer-btn"
+        fill="clear"
+        expand="full"
+        (click)="navContact()"
+      >
+        Contact
+      </ion-button>
+      <ion-button
+        href="https://www.facebook.com/Atlantykron"
+        class="footer-btn"
+        fill="clear"
+        expand="full"
+      >
+        <ion-icon name="logo-facebook"></ion-icon>
+      </ion-button>
+      <ion-button
+        href="https://www.instagram.com/atlantykron/"
+        class="footer-btn"
+        fill="clear"
+        expand="full"
+      >
+        <ion-icon name="logo-instagram"></ion-icon>
+      </ion-button>
+    </ion-row>
+  </div>
 </ion-grid>
-<p class='copyright-text center-text-footer'>© Copyright Atlantykron 2022 – Toate drepturile rezervate</p>
+<p class="copyright-text center-text-footer">
+  {{ 'copyright' | translate }}
+</p>
