--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,2 +1,2 @@
-<h2 class='section-title'>Locația</h2>
+<h2 class="section-title">{{ 'location' | translate }}</h2>
 <div #mapContainer id="map"></div>
