--- a/src/app/contact/contact.page.html
+++ b/src/app/contact/contact.page.html
@@ -1,30 +1,55 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-    <ion-grid id='material-card'>
-        <ion-row>
-            <ion-col id='form-col'>
-                <ion-item class='form-item' (keyup.enter)="sendEmail()">
-                    <ion-label position='floating'>*Adresa ta E-mail</ion-label>
-                    <ion-input [(ngModel)]="emailAddress" ngModel email required></ion-input>
-                </ion-item>
-                <ion-item id='message' class='form-item'>
-                    <ion-label position='floating'>*Mesajul</ion-label>
-                    <ion-textarea auto-grow minlength=50 maxlength=1000 [(ngModel)]="emailBody" required></ion-textarea>
-                </ion-item>
-                <p *ngIf="displaySuccess" class="success-msg">Email trimis cu succes!</p>
-                
-                <p *ngIf="displayFailedApiReq" class="error-msg">Ne pare rau, mesajul nu a putut fi trimis</p>
+  <ion-grid id="material-card">
+    <ion-row>
+      <ion-col id="form-col">
+        <ion-item class="form-item" (keyup.enter)="sendEmail()">
+          <ion-label position="floating"
+            >{{ 'yourEmail' | translate }}</ion-label
+          >
+          <ion-input
+            [(ngModel)]="emailAddress"
+            ngModel
+            email
+            required
+          ></ion-input>
+        </ion-item>
+        <ion-item id="message" class="form-item">
+          <ion-label position="floating">{{ 'message' | translate }}</ion-label>
+          <ion-textarea
+            auto-grow
+            minlength="50"
+            maxlength="1000"
+            [(ngModel)]="emailBody"
+            required
+          ></ion-textarea>
+        </ion-item>
+        <p *ngIf="displaySuccess" class="success-msg">
+          {{ 'emailSuccess' | translate }}
+        </p>
 
-                <p *ngIf="displayError" class="error-msg">Adresa email este greșită sau mesajul este gol</p>
-                <ion-button fill='outline' class='login-button' (click)="sendEmail()">Trimitere</ion-button>
-            </ion-col>
+        <p *ngIf="displayFailedApiReq" class="error-msg">
+          {{ 'emailBlank' | translate }}
+        </p>
 
-            <ion-row *ngIf='!mobile'>
-                <img class='svg-login' src='../../assets/illustrations/Group 24.svg' alt='contact illustration'>
-            </ion-row>
-        </ion-row>
-    </ion-grid>
+        <p *ngIf="displayError" class="error-msg">
+          {{ 'emailError' | translate }}
+        </p>
+        <ion-button fill="outline" class="login-button" (click)="sendEmail()"
+          >{{ 'send' | translate }}</ion-button
+        >
+      </ion-col>
 
-    <app-footer></app-footer>
+      <ion-row *ngIf="!mobile">
+        <img
+          class="svg-login"
+          src="../../assets/illustrations/Group 24.svg"
+          alt="contact illustration"
+        />
+      </ion-row>
+    </ion-row>
+  </ion-grid>
+
+  <app-footer></app-footer>
 </ion-content>
