--- a/src/app/forgot/forgot.page.html
+++ b/src/app/forgot/forgot.page.html
@@ -1,26 +1,40 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-    <ion-grid id='material-card'>
-        <ion-row>
-            <ion-col (keydown.enter)="forgotEmail()" id='form-col'>
-                <ion-item class='form-item'>
-                    <ion-label position='floating'>*E-mail</ion-label>
-                    <ion-input [(ngModel)]="email" ngModel email required></ion-input>
-                    <ion-note slot="error"></ion-note>
-                </ion-item>
-                <ion-button fill='outline' class='login-button' (click)="forgotEmail()">Trimite</ion-button>
-                <p *ngIf="displayError" class="error-msg">Adresa email sau parola este greșită</p>
-                <p>Ai deja un cont?</p>
-                <ion-button fill='outline' class='login-button' (click)='navLogin()'>Logare</ion-button>
-            </ion-col>
-            <ion-row *ngIf='!mobile'>
-                <img class='svg-login' src='../../assets/illustrations/Group 2.svg' alt='login illustration'>
-                <img class='svg-login' id='login-blob' src='../../assets/illustrations/blob-shape-login.svg'
-                    alt='login blob'>
-            </ion-row>
-        </ion-row>
-    </ion-grid>
+  <ion-grid id="material-card">
+    <ion-row>
+      <ion-col (keydown.enter)="forgotEmail()" id="form-col">
+        <ion-item class="form-item">
+          <ion-label position="floating">*E-mail</ion-label>
+          <ion-input [(ngModel)]="email" ngModel email required></ion-input>
+          <ion-note slot="error"></ion-note>
+        </ion-item>
+        <ion-button fill="outline" class="login-button" (click)="forgotEmail()"
+          >{{ 'send' | translate }}</ion-button
+        >
+        <p *ngIf="displayError" class="error-msg">
+          {{ 'emailOrPasswordWrong' | translate }}
+        </p>
+        <p>{{ 'alreadyHaveAccount' | translate }}</p>
+        <ion-button fill="outline" class="login-button" (click)="navLogin()"
+          >{{ 'login' | translate }}</ion-button
+        >
+      </ion-col>
+      <ion-row *ngIf="!mobile">
+        <img
+          class="svg-login"
+          src="../../assets/illustrations/Group 2.svg"
+          alt="login illustration"
+        />
+        <img
+          class="svg-login"
+          id="login-blob"
+          src="../../assets/illustrations/blob-shape-login.svg"
+          alt="login blob"
+        />
+      </ion-row>
+    </ion-row>
+  </ion-grid>
 
-    <app-footer></app-footer>
+  <app-footer></app-footer>
 </ion-content>
