--- a/src/app/guide/guide.component.html
+++ b/src/app/guide/guide.component.html
@@ -1,17 +1,29 @@
 <ion-grid>
-	<ion-row>
-		<ion-row>
-			<img src='../../assets/illustrations/Guide_Illustration.svg' alt='Guide Illustration' class='guide-img'
-			[ngClass]="{'no-margin': mobile || tablet, 'smaller-img': !mobile}">
-			<ion-col class='section-col'>
-				<h2 class="section-title">O zi tipică într-o tabără atipică</h2>
-				<p class='section-text'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
-				<ion-button fill='outline' class='section-button' (click)="navigateToParticipate()">Află Mai Multe
-				</ion-button>
-				<p class='section-text'>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et</p>
-				<ion-button fill='outline' class='section-button' (click)="navigateToParticipate()">Ghid Participare
-				</ion-button>
-			</ion-col>
-		</ion-row>
-	</ion-row>
+  <ion-row>
+    <ion-row>
+      <img
+        src="../../assets/illustrations/Guide_Illustration.svg"
+        alt="Guide Illustration"
+        class="guide-img"
+        [ngClass]="{ 'no-margin': mobile || tablet, 'smaller-img': !mobile }"
+      />
+      <ion-col class="section-col">
+        <h2 class="section-title">{{ 'typicalDay' | translate }}</h2>
+        <p class="section-text">{{ 'typicalDayDescription' | translate }}</p>
+        <ion-button
+          fill="outline"
+          class="section-button"
+          (click)="navigateToParticipate()"
+          >{{ 'findOutMore' | translate }}
+        </ion-button>
+        <p class="section-text">{{ 'participationGuide' | translate }}</p>
+        <ion-button
+          fill="outline"
+          class="section-button"
+          (click)="navigateToParticipate()"
+          >{{ 'goToGuide' | translate }}
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-row>
 </ion-grid>
