--- a/src/app/participate/participate.page.html
+++ b/src/app/participate/participate.page.html
@@ -1,39 +1,49 @@
 <app-navbar></app-navbar>
 
 <ion-content>
-    <ion-grid id='material-card'>
-        <ion-row class='main-col'>
-            <ion-col justify-content-start float-left> 
-                <ion-row *ngIf="menuBreakpoint">
-                    <ion-item class="select-step central-cards">
-                        <ion-label>Selectați Pasul</ion-label>
-                        <ion-select interface="popover" (ionChange)="segmentChanged($event.target.value)" [(ngModel)]="step">
-                            <ion-select-option *ngFor="let stepOption of ['guide', 'rules', 'enrollForm']"
-                                value="{{stepOption}}">{{stepDisplay[stepOption]}}</ion-select-option>
-                        </ion-select>
-                    </ion-item>
-                </ion-row>
-                <ion-segment (ionChange)="segmentChanged($event.detail.value)" *ngIf="!menuBreakpoint" [(ngModel)]="step">
-                    <ion-segment-button value="guide">
-                      <ion-label>{{stepDisplay.guide}}</ion-label>
-                    </ion-segment-button>
-                    <ion-segment-button value="rules">
-                        <ion-label>{{stepDisplay.rules}}</ion-label>
-                      </ion-segment-button>
-                      <ion-segment-button value="enrollForm">
-                        <ion-label>{{stepDisplay.enrollForm}}</ion-label>
-                      </ion-segment-button>
-                </ion-segment>
-                
-                <ion-col>
-                  <app-segment-guide *ngIf="step == 'guide'"></app-segment-guide>
-                  <app-segment-rules *ngIf="step == 'rules'"></app-segment-rules>
-                  <app-segment-form *ngIf="step == 'enrollForm'"></app-segment-form>
-                </ion-col>
-
-            </ion-col>
+  <ion-grid id="material-card">
+    <ion-row class="main-col">
+      <ion-col justify-content-start float-left>
+        <ion-row *ngIf="menuBreakpoint">
+          <ion-item class="select-step central-cards">
+            <ion-label>{{ 'selectStep' | translate }}</ion-label>
+            <ion-select
+              interface="popover"
+              (ionChange)="segmentChanged($event.target.value)"
+              [(ngModel)]="step"
+            >
+              <ion-select-option
+                *ngFor="let stepOption of ['guide', 'rules', 'enrollForm']"
+                value="{{stepOption}}"
+                >{{stepDisplay[stepOption]}}</ion-select-option
+              >
+            </ion-select>
+          </ion-item>
         </ion-row>
-    </ion-grid>
+        <ion-segment
+          (ionChange)="segmentChanged($event.detail.value)"
+          *ngIf="!menuBreakpoint"
+          [(ngModel)]="step"
+        >
+          <ion-segment-button value="guide">
+            <ion-label>{{stepDisplay.guide}}</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="rules">
+            <ion-label>{{stepDisplay.rules}}</ion-label>
+          </ion-segment-button>
+          <ion-segment-button value="enrollForm">
+            <ion-label>{{stepDisplay.enrollForm}}</ion-label>
+          </ion-segment-button>
+        </ion-segment>
 
-    <app-footer></app-footer>
+        <ion-col>
+          <app-segment-guide *ngIf="step == 'guide'"></app-segment-guide>
+          <app-segment-rules *ngIf="step == 'rules'"></app-segment-rules>
+          <app-segment-form *ngIf="step == 'enrollForm'"></app-segment-form>
+        </ion-col>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <app-footer></app-footer>
 </ion-content>
