--- a/src/app/participate/segment-rules/segment-rules.component.html
+++ b/src/app/participate/segment-rules/segment-rules.component.html
@@ -3,106 +3,98 @@
   <img class="rules-image" src="../../../assets/illustrations/rules.svg" alt='rules illustration'/>
 
   <p class="wrap-image">
-    Academia de vară Atlantykron dorește să ofere participanților o experiență unică pe întreaga durată a evenimentului. O frumoasă armonizare cu mediul natural, cursuri și ateliere în aer liber susținute de profesioniști care excelează în domeniile lor.
+    {{ 'rules1' | translate }}
   </p>
 
   <p class="wrap-image">
-    Pentru ca aceste lucruri să fie posibile, este nevoie ca toți participanții  să respecte un set minimal de reguli, atât pentru păstrarea unei atmosfere plăcute, cât și pentru desfășurarea în siguranță a activităților întreprinse. De aceea, pentru participarea la Academie, toți participanții se obligă:
+    {{ 'rules2' | translate }}
   </p>
 
   <ul>
     <li>
       <p>
-        <b>să se înscrie în prealabil</b> în program folosind formularul de pe site. Vor putea participa doar cei care au completat formularul. (în situații excepționale participantul se poate înscrie și după termenul limită, însă primirea sa în Academie este în continuare condiționată de acceptarea în program);
+        <b>{{ 'rules3bold' | translate }}</b> {{ 'rules3' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să finalizeze formalitatile de inregistrare</b> – sa fie prezenti in prima zi la Cernavoda la intalnirea cu echipa de inregistrare sau sa contacteze echipa de inregistrare in cel mai scurt timp posibil de la sosirea pe insula;
+        <b>{{ 'rules4bold' | translate }}</b> {{ 'rules4' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să poarte asupra sa intr-un loc vizibil brățara</b> primită la înregistrarea pe insulă, pe toată durata Academiei;
+        <b>{{ 'rules5bold' | translate }}</b> {{ 'rules5' | translate }}
       </p>
     </li>
     <li>
       <p>
-        să pasteze un <b>comportament adecvat fata de instructori, invitati si organizatori,</b> intelegand faptul ca toti instructorii, invitatii si intreaga echipa de organizare isi oferta timpul si efortul in mod voluntar pentru desfasurarea Academiei;
+        {{ 'rules6' | translate }} <b>{{ 'rules6bold' | translate }}</b> {{ 'rules6cont' | translate }}
       </p>
     </li>
     <li>
       <p>
-        să păstreze o <b>atitudine respectuoasă</b> față de toți ceilalți participanți.
+        {{ 'rules7' | translate }} <b>{{ 'rules7bold' | translate }}</b>
       </p>
     </li>
     <li>
       <p>
-        să <b>păstreze curățenia</b> pe întreg spațiul insulei;
+        <b>{{ 'rules7cont' | translate }}</b>
       </p>
     </li>
     <li>
       <p>
-        <b>să respecte indicațiile</b> primite din partea organizatorilor;
+        <b>{{ 'rules8bold' | translate }}</b> {{ 'rules8' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să se scalde și să facă focul doar cu aprobarea</b> si numai în locurile desemnate de organizatori;
+        <b>{{ 'rules9bold' | translate }}</b> {{ 'rules9' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să nu folosească sau să monteze instalații electrice neautorizate</b> (pentru încărcarea telefoanelor sau altor dispozitive vor fi instalate puncte speciale în acest sens);
+        <b>{{ 'rules10bold' | translate }}</b> {{ 'rules10' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să utilizeze cu discernământ rețeaua de internet</b> pusă la dispoziție și să respecte indicațiile primite în acest sens;
+        <b>{{ 'rules11bold' | translate }}</b> {{ 'rules11' | translate }}
       </p>
     </li>
     <li>
       <p>
-        să nu organizeze activități independente după lasarea întunericului;
+        {{ 'rules12bold' | translate }}
       </p>
     </li>
     <li>
       <p>
-        să nu introducă pe insulă băuturi alcoolice;
+        {{ 'rules12' | translate }}
       </p>
     </li>
     <li>
       <p>
-        <b>să nu introducă pe insulă și să nu consume substanțe interzise, stupefiante sau halucinogene.</b>
+        <b>{{ 'rules13' | translate }}</b>
       </p>
     </li>
   </ul>
-  <p>*Nerespectarea atrage după sine notificarea autorităților și măsurile care se impun confor legii.</p>
+  <p>{{ 'rules14' | translate }}</p>
   <p class="attention">
-    Organizatorii își rezervă dreptul de a exclude din cadrul Academiei orice persoană, fără a oferi explicații. Setul de reguli anterior este unul minimal.  
+    {{ 'rules15' | translate }}  
   </p>
   <p>
-    Academia se adreseaza tinerilor cu vârsta între 16 și 29 de ani. <b>Persoanele mai tinere de 16 ani</b> pot participa doar in situatii exceptionale si doar însoțite de un adult. Adultul insotitor isi asuma intreaga responsabilitatea atat pentru comportamentul pe insula, cat si pentru pastrarea in siguranta a persoanei sub 16 ani.
+    {{ 'rules16' | translate }}
   </p>
-  <p><b>Participanții cu vârsta sub 18 ani</b>, trebuie ca la înregistrare: </p>
+  <p><b>{{ 'rules19bold' | translate }}</b>{{ 'rules19cont' | translate }} </p>
   <ul>
     <li>
       <p>
-        să prezinte <a href="../../../assets/pdf/declaratie-consimtamant.pdf" target="_blank" class="attention">scrisoarea de consimțământ</a> din partea părinților sau a tutorelui legal (daca nu sunt insotiti de parinte sau tutore).
+        {{ 'rules20' | translate }} <a href="../../../assets/pdf/declaratie-consimtamant.pdf" target="_blank" class="attention">{{ 'rules20link' | translate }}</a> {{ 'rules20cont' | translate }}
       </p>
     </li>
     <li>
       <p>
-        să achite integral bonurile de masă, pentru întreaga perioadă a evenimentului.
+        {{ 'rules21' | translate }}
       </p>
-      <ul>
-        <li>
-          <p>
-            Vom afișa în curând propunerea de meniu din partea furnizorului nostru.
-            Costul estimativ al mesei pentru 6 zile este de 360 lei.
-          </p>
-        </li>
-      </ul>
     </li>
   </ul>
 </div>
