build prod script, translation bugfixes

--- a/src/app/registration/registration.page.html
+++ b/src/app/registration/registration.page.html
@@ -39,7 +39,7 @@
         <p>
           {{ 'registrationAgreement' | translate }}
           <span class="link" (click)="navPrivacyPolicy()"
-            >{{ privacyPolicy | translate }}.</span
+            >{{ 'privacyPolicy' | translate }}.</span
           >
         </p>
         <ion-row class="registration-btn">
@@ -88,7 +88,7 @@
         </ion-row>
         <p id="forgot" (click)="navForgot()">
           {{ 'forgotPassword' | translate }}
-          <span id="click-here">{{ clickHere | translate }}</span>
+          <span id="click-here">{{ 'clickHere' | translate }}</span>
         </p>
         <p>{{ 'or' | translate }}</p>
         <ion-button fill="outline" class="login-button" (click)="navLogin()"
